

                              Kiji Schema Release Notes

Version 1.0.0-rc5
  * SCHEMA-219. Adds KijiWriterFactory with access in KijiTable and
      AtomicKijiPutter with access in KijiUtilityWriterFactory.
  * SCHEMA-103. Remove ColumnNameTranslator from public API.
  * SCHEMA-140. Update API for metatable backups. This changes the
      backup format. Please re-backup your tables using the new API.
  * SCHEMA-136. Make KijiRowKeySplitter a non-static class. Get an instance
      with the KijiRowKeySplitter.get() method.
  * SCHEMA-145. Change KijiColumnFilter.Context to abstract class.
  * SCHEMA-199. VALID_INSTANCE_NAME should not match the empty string.
  * SCHEMA-9. Add a CLI tool for KijiSchema System Table.
      supports putting and getting properties from the system table.
  * SCHEMA-198. KijiColumnName validates family names using
      KijiNameValidator. KijiInvalidNameException is unchecked.
  * SCHEMA-135. Clean up API for table layout backups. This changes the
      backup format. Please re-backup your tables using the new API.

Version 1.0.0-rc4
  * BENTO-15. When run within a BentoBox, the 'kiji' script will notify you
      of a new BentoBox version if one is available.
  * SCHEMA-218. Fix instance-listing capability in 'kiji ls'.
  * SCHEMA-67. Remove unused classes (CounterManager, NumberParser).
  * SCHEMA-197. Layout versions now use the "layout" namespace.
      Changes the expected layout format version to "layout-1.0" or
      "layout-1.1". This avoids a collision with instances, etc. All layouts
      in resources have had their version numbers changed to "layout-1.0" or
      "layout-1.1". Existing layouts with a 'kiji-1.0' version string are
      supported. "kiji version" will now show the minimum and maximum layout
      versions that this kiji version can recognize.
  * SCHEMA-211. Use "default" instance in default KijiURIBuilder.
  * SCHEMA-208. Make KijiURIException unchecked.
  * SCHEMA-201. Fix NPE in 'kiji install'.